# URS

./: .env  .gitignore  .travis.yml  404.html  CONTRIBUTING.md  Cargo.toml  LICENSE  MANIFEST.in  README.md  contributors.html  credentials.html  derivative-projects.html  exporting.html  index.html  installation.html  introduction.html  pentscraper.py  print.html  pyproject.toml  reddit_scraper.py  requirements.txt  scraper.py  searchindex.js  searchindex.json  setup.py  universal_scraper.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  STYLE_GUIDE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md  bug_report.md  feature_request.md
.github/workflows/: clippy.yml  formatting.yml  github-actions-pytest.yml  manual.yml  pytest.yml  python-formatting.yml  python.yml  rust.yml  rustfmt.yml
additional-information/: 2fa-information.html  error-messages.html
analytical-tools/: frequencies-and-wordclouds.html  general-information.html
contributing/: before-making-pull-or-feature-requests.html  building-on-top-of-urs.html  making-pull-or-feature-requests.html
crates/urs-api/: Cargo.toml
crates/urs-api/src/: error.rs  extractors.rs  lib.rs  middleware.rs  response.rs  state.rs
crates/urs-api/src/routes/: comments.rs  livestream.rs  mod.rs  redditor.rs  subreddit.rs
crates/urs-cli/: Cargo.toml
crates/urs-cli/assets/: banner.txt
crates/urs-cli/src/: helpers.rs  main.rs
crates/urs-cli/src/browse/: csv.rs  helpers.rs  loader.rs  markdown.rs  mod.rs  routes.rs  server.rs  settings.rs  templates.rs  time.rs
crates/urs-cli/src/browse/assets/: scrape.js  style.css
crates/urs-cli/src/browse/scrape/: handlers.rs  helpers.rs  livestream.rs  mod.rs  progress.rs  runners.rs
crates/urs-cli/src/browse/views/: analytics.rs  comments.rs  livestream.rs  mod.rs  redditor.rs
crates/urs-cli/src/commands/: analyze.rs  browse.rs  check.rs  comments.rs  config.rs  livestream.rs  log.rs  mod.rs  redditor.rs  serve.rs  subreddit.rs
crates/urs-cli/src/config/: credentials.rs  init.rs  mod.rs  types.rs
crates/urs-cli/src/tui/: app.rs  event.rs  mod.rs  terminal.rs  ui.rs
crates/urs-cli/src/tui/app/: getters.rs  handlers.rs  mod.rs
crates/urs-cli/src/tui/ui/: detail.rs  header.rs  helpers.rs  mod.rs  status.rs  table.rs
crates/urs-cli/templates/: base.html  index.html  shell.html  tree_fragment.html
crates/urs-cli/templates/fragments/: analytics.html  comments.html  csv.html  error.html  livestream.html  livestream_live.html  redditor.html  scrape_form.html  scrape_result.html  settings.html  submissions.html
crates/urs-cli/templates/rich/: redditor_tab.html
crates/urs-core/: Cargo.toml
crates/urs-core/src/: auth.rs  error.rs  lib.rs
crates/urs-core/src/analytics/: mod.rs  stop_words.rs  word_freq.rs  wordcloud.rs
crates/urs-core/src/analytics/word_freq/: analyzer.rs  extractable.rs  frequencies.rs  mod.rs
crates/urs-core/src/client/: endpoints.rs  http.rs  mod.rs  rate_limit.rs
crates/urs-core/src/client/endpoints/: comments.rs  livestream.rs  mod.rs  redditor.rs  subreddit.rs
crates/urs-core/src/export/: csv.rs  json.rs  mod.rs
crates/urs-core/src/models/: api.rs  comment.rs  mod.rs  redditor.rs  submission.rs  subreddit.rs
crates/urs-core/src/scrapers/: comments.rs  livestream.rs  mod.rs  redditor.rs  subreddit.rs
crates/urs-core/src/scrapers/comments/: mod.rs  parser.rs
docs/: Error Messages.md  Guide to Getting PRAW Credentials.md  How to Get PRAW Credentials.md  In-Depth Walkthrough.md  PULL_REQUEST_TEMPLATE.md  Releases.md  Some Linux Tips.md  The Forest.md  Two-Factor Authentication.md
help-text/: epilogue.txt  examples.txt  usage.txt
implementation-details/: speeding-up-python-with-rust.html  the-forest.html
livestreaming-reddit/: general-information.html  livestreaming-subreddits-and-redditors.html
manual/: book.toml
manual/src/: 2fa-information.md  README.md  SUMMARY.md  contributors.md  credentials.md  derivative-projects.md  error-messages.md  exporting.md  installation.md  introduction.md
manual/src/additional-information/: 2fa-information.md  error-messages.md
manual/src/analytical-tools/: frequencies-and-wordclouds.md  general-information.md
manual/src/scraping-reddit/: redditor.md  (+4 more)
python/: rust_vs_python.py
scraping-reddit/: all-attributes-table.html  redditor.html  scrape-speeds-and-rate-limits.html  submission-comments.html  subreddit.html
src/: cli.py  export.py  global_vars.py  scraper.py  titles.py  tools.py  validation.py
src/scraper_functions/: basic_functions.py  comments_functions.py  redditor_functions.py  subreddit_functions.py
src/scrapers/: basic.py  comments.py  redditor.py  subreddit.py
supplemental_docs/: Error Messages.md  The Forest.md
taisun/: comments.rs  lib.rs  utilities.rs
tests/: Unit Test Notes.md  conftest.py  test_Basic.py  test_Cli.py  test_Comments.py  test_Credentials.py  test_DirInit.py  test_Export.py  test_Frequencies.py  test_Global.py  test_PrepData.py  test_Redditor.py  test_Subreddit.py  test_Tools.py  test_Validation.py  test_Wordcloud.py
tests/test_analytics/: test_Frequencies.py  test_PrepData.py  test_Wordcloud.py
tests/test_praw_scrapers/: test_Basic.py  test_Comments.py  test_Objectify.py  test_Redditor.py  test_Subreddit.py  test_Validation.py
tests/test_utils/: test_Cli.py  test_DirInit.py  test_Export.py  test_Global.py  test_Tools.py  test_Utilities.py
urs/: .coverage  Credentials.py  Tools.py  Urs.py  Version.py  scraper.py  tools.py
urs/analytics/: Chart.py  Frequencies.py  Wordcloud.py
urs/cli/: utils.py  validator.py
urs/praw_scrapers/: Basic.py  Comments.py  Redditor.py  Subreddit.py
urs/pushshift_scrapers/: SearchSubmissions.py
urs/utils/: Basic.py  Cli.py  Comments.py  DirInit.py  Export.py  Global.py  Logger.py  Redditor.py  Subreddit.py  Titles.py  Tools.py  Utilities.py  Validation.py  basic_functions.py  cli.py  comments_functions.py  export.py  global_vars.py  redditor_functions.py  subreddit_functions.py  titles.py  validation.py
utilities/: rate-limit-checking.html  tree.html
(+84 files in other folders)
