[workspace]
members = ["crates/urs-core", "crates/urs-cli"]
resolver = "2"

[workspace.package]
authors = ["Joseph Lai <urs_project@protonmail.com>"]
edition = "2024"
homepage = "https://github.com/JosephLai241/URS"
license = "MIT"
repository = "https://github.com/JosephLai241/URS"
rust-version = "1.85"

[workspace.dependencies]
askama = "0.13"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
colored = "3"
console = "0.15"
crossterm = { version = "0.28", features = ["event-stream"] }
csv = "1"
directories = "6"
dotenvy = "0.15"
futures = "0.3"
image = "0.25"
indicatif = "0.17"
mime_guess = "2"
pulldown-cmark = "0.12"
pyo3 = { version = "0.23", features = ["extension-module"] }
ratatui = "0.29"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["compression-gzip"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
wordcloud-rs = "0.1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
nursery = "warn"
pedantic = "warn"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[profile.release-with-debug]
debug = true
inherits = "release"
strip = false
