[package]
description = "CLI for Universal Reddit Scraper"
edition.workspace = true
license.workspace = true
name = "urs-cli"
repository.workspace = true
rust-version.workspace = true
version = "4.0.0"

[dependencies]
anyhow = "1"
chrono.workspace = true
clap.workspace = true
colored.workspace = true
crossterm.workspace = true
directories.workspace = true
dotenvy.workspace = true
futures.workspace = true
indicatif.workspace = true
open = "5.3.3"
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tabled = "0.17"
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
urs-core = { path = "../urs-core" }

[lints]
workspace = true
