[package]
name = "urs-core"
version = "4.0.0"
description = "Core library for Universal Reddit Scraper"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
base64.workspace = true
url.workspace = true
tracing.workspace = true
dotenvy.workspace = true

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"

[lints]
workspace = true
