[package]
description = "Core library for Universal Reddit Scraper"
edition.workspace = true
license.workspace = true
name = "urs-core"
repository.workspace = true
rust-version.workspace = true
version = "4.0.0"

[dependencies]
base64.workspace = true
chrono.workspace = true
image.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
wordcloud-rs.workspace = true

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"

[lints]
workspace = true
